CSS Grid Update

--- a/exercises/module-2/mario-pest-control/mpc.html
+++ b/exercises/module-2/mario-pest-control/mpc.html
@@ -6,6 +6,24 @@
     <body>
         <h1>mario-pest-control</h1>
         <figure class="circle"></figure>
+        
+        <div class="box-1">
+            <h2>GOOMBA: Wanted Dead or Alive</h2>
+            <p>(Princess Peach will pay 5-Coins per head or catch)</p>
+            <img src="goomba.png">
+        </div>
+        <div class="box-2">  
+            <h2>BOMB-OMB: Wanted Dead or Alive</h2>
+            <p>(Princess Peach will pay 7-Coins per head or catch)</p>
+            <img src="bomb-omb.png">
+        </div>
+        <div class="box-3">     
+            <h2>CHEEP-CHEEP: Wanted Dead or Alive </h2>
+            <p>(Princess Peach will pay 11-Coins per head or catch)</p>
+            <img src="cheep-cheep.png">
+        </div>
+           
+        </ul>
         <script src="mpc.js"></script>
     </body>
 </html>
