--- a/exercises/module-1/css-grid-practice-assignment-2/index.html
+++ b/exercises/module-1/css-grid-practice-assignment-2/index.html
@@ -5,11 +5,11 @@
     </head>
         <body>
 <div id="grid-container">
-    <div id="box1">1</div>
-    <div id="box2">2</div>
-    <div id="box3">3</div>
-    <div id="box4">4</div>
-    <div id="box5">5</div>
+    <div id="box1"></div>
+    <div id="box2"></div>
+    <div id="box3"></div>
+    <div id="box4"></div>
+    <div id="box5"></div>
 </div>
         </body>
     
