css penguin update

--- a/exercises/module-2/go-speed-clicker-go/sc.html
+++ b/exercises/module-2/go-speed-clicker-go/sc.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         <title>go-speed-clicker-go</title>
+        <link rel="stylesheet" href="sc.css">
     </head>
     <body>
         <h1>GO-SPEED-CLICKER-GO</h1>
+        <button class="button">CLICK THIS</button>
     <script src="sc.js"></script>
     </body>
 </html>
