css zen garden update

--- a/exercises/module-2/css-zen-garden/czg.html
+++ b/exercises/module-2/css-zen-garden/czg.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <link rel="style.css" />
+        <link rel="style.css" href="czg.css" />
     </head>
     <body>
         <div class="container">
-            <div></div>
-            <div></div>
+            <div>1</div>
+            <div>2</div>
             <div></div>
             <div class="authors"></div>
             <div></div>
@@ -23,5 +23,6 @@
                 </div>
             </div>
         </div>
+        <script src="czg.js"></script>
     </body>
 </html>
