business time update

--- a/exercises/module-1/business-time/g-rolie.html
+++ b/exercises/module-1/business-time/g-rolie.html
@@ -1,7 +1,7 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-      <title>Bootstrap Example</title>
+      <title>G-ROLIE</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
         <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     </head>
     <body>
-        <div class="navbar" >
+        <div class="nav" >
           <a href="sss.html"><i class="nav"></i>SSS</a> 
           <a href="g-rolie.html"><i class="nav"></i>G-ROLIE</a> 
           <a href="lmno.html"><i class="nav"></i>LMNO</a> 
@@ -27,7 +27,7 @@
 
     <h2>G-ROLIE <span class="a"></span></h2>
 
-    <img src="https://images.unsplash.com/photo-1579509609985-460f8e833e4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">   
+    <img src="G-ROLIE.png">   
               
     <p>Rise Up</p> 
     
