--- a/exercises/module-1/business-time/lmno.html
+++ b/exercises/module-1/business-time/lmno.html
@@ -2,7 +2,7 @@
 
     <head>
 
-      <title>SSS</title>
+      <title>LMNO</title>
 
       <link rel="stylesheet" href="styles.css">
       
@@ -11,7 +11,7 @@
 </head>
 
   <body>
-        <div class="navbar" >
+        <div class="nav" >
           <a href="sss.html"><i class="nav"></i>SSS</a> 
           <a href="g-rolie.html"><i class="nav"></i>G-ROLIE</a> 
           <a href="lmno.html"><i class="nav"></i>LMNO</a> 
