--- a/exercises/module-1/business-time/sss.html
+++ b/exercises/module-1/business-time/sss.html
@@ -12,7 +12,7 @@
         <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     </head>
     <body>
-        <div class="navbar" >
+        <div class="nav" >
           <a href="sss.html"><i class="nav"></i>SSS</a> 
           <a href="g-rolie.html"><i class="nav"></i>G-ROLIE</a> 
           <a href="lmno.html"><i class="nav"></i>LMNO</a> 
