--- a/exercises/module-1/business-time/femalien-filmcore.html
+++ b/exercises/module-1/business-time/femalien-filmcore.html
@@ -1,7 +1,7 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-      <title>FEMALIEN FILMCORE</title>
+      <title>FEMALIEN-FILMCORE</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
@@ -14,7 +14,7 @@
 
     <body> 
 
-        <div class="navbar" >
+        <div class="nav">
           <a href="sss.html"><i class="nav"></i>SSS</a> 
           <a href="g-rolie.html"><i class="nav"></i>G-ROLIE</a> 
           <a href="lmno.html"><i class="nav"></i>LMNO</a> 
