business time update

--- a/exercises/module-1/business-time/femalien-filmcore.html
+++ b/exercises/module-1/business-time/femalien-filmcore.html
@@ -22,7 +22,7 @@
           <a href="swiss-drip.html"><i class="nav"></i>SWISS-DRIP</a>
           </div>
           
-          <input type="text" class="form-control" placeholder="Search" name="search">
+          <input type="text" id="search" placeholder="Search" name="search">
 
         <h1 id="myHeader" class="border-webkit">===</h1>
 
