--- a/exercises/module-1/business-time/index.html
+++ b/exercises/module-1/business-time/index.html
@@ -5,20 +5,19 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
-      <script src="app.js"></script>
-
     </head>
     <body>
+      <div id="grid-container">
         <div class="nav">
           <a href="sss.html" class="nav">SSS</a> 
           <a href="g-rolie.html" class="nav">G-ROLIE</a> 
-          <a href="lmno.html">LMNO</a> 
-          <a href="femalien-filmcore.html"><i class="nav"></i>FEMALIEN-FILMCORE</a>
-          <a href="swiss-drip.html"><i class="nav"></i>SWISS-DRIP</a>
+          <a href="lmno.html" class="nav">LMNO</a> 
+          <a href="femalien-filmcore.html" class="nav">FEMALIEN-FILMCORE</a>
+          <a href="swiss-drip.html"class="nav">SWISS-DRIP</a>
           </div>
-       
-     
 
+        <input type="text" id="search" placeholder="Search" name="search">
+  
         <h1 id="myHeader" class="sig">===</h1>
 
         <div class="brands">
@@ -52,6 +51,7 @@
           </div>
 
         <footer>===</footer>
+      </div>
           <script src="index.js"></script>
   </body>
 </html>
