--- a/exercises/module-1/business-time/sss.html
+++ b/exercises/module-1/business-time/sss.html
@@ -6,10 +6,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <script src="app.js"></script>
-      
-      
-        <link rel="stylesheet" href="index.css"/>
-        <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     </head>
     <body>
         <div class="nav" >
@@ -19,10 +15,10 @@
           <a href="femalien-filmcore.html"><i class="nav"></i>FEMALIEN-FILMCORE</a>
           <a href="swiss-drip.html"><i class="nav"></i>SWISS-DRIP</a>
         </div>
-          <input type="text" class="form-control" placeholder="Search" name="search">
+          <input type="text" id="search" placeholder="Search" name="search">
         <h1 id="myHeader" class="border-webkit">===</h1>
           <h2>SSS</h2>
-          <img class="pic" src="https://images.unsplash.com/photo-1560406145-f34b88bff872?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60crop&w=800&q=60">
+          <img class="pic" src="SSS.png">
           <p>Super Symmetrical Solutions</p>
       <footer>===</footer>
 
