--- a/exercises/module-1/business-time/g-rolie.html
+++ b/exercises/module-1/business-time/g-rolie.html
@@ -19,7 +19,8 @@
           <a href="femalien-filmcore.html"><i class="nav"></i>FEMALIEN-FILMCORE</a>
           <a href="swiss-drip.html"><i class="nav"></i>SWISS-DRIP</a>
           </div>
-          <input type="text" class="form-control" placeholder="Search" name="search">
+
+          <input type="text" id="search" placeholder="Search" name="search">
         
     <h1 id="myHeader" class="border-webkit">===</h1>
 
