--- a/exercises/module-2/css-zen-garden/czg.html
+++ b/exercises/module-2/css-zen-garden/czg.html
@@ -1,28 +1,30 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <link rel="style.css" href="czg.css" />
+        <title>CSS Zen Garden: The Beauty of CSS Design</title>
+        <link rel="stylesheet" href="czg.css">
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Dave Shea">
+        <meta name="description" content="A demonstration of what can be acomplished visually through CSS based design.">
+        <meta name="robots" content="all">
+
     </head>
-    <body>
-        <div class="container">
-            <div>1</div>
-            <div>2</div>
-            <div></div>
-            <div class="authors"></div>
-            <div></div>
-            <div class="links"></div>
-            <div></div>
-            <div></div>
-            <div class="footer"></div>
-            <div class="footer">
-                <div class="icons">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            </div>
+    
+    <body id="css-zen-garden">
+        <div class="grid-container">
+        <div class="page-wrapper">
+            <selection class="intro" id="zen-intro">
+                <header role="banner">
+                    <h1>CSS Zen Garden</h1>
+                    <h2>The Beauty of<abbr title="Cascading Style Sheets">CSS</abbr>Design</h2>
+                </header>
+                <div class="summary" id="zen-summary" role="article">
+                    <p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to load it into this page.</p>
+                    <p>Download the exapmle <a href="/examples/index" title="This pages source HTML code, not to be modified">html file</a> and <a href="/example/style.css</p>
+            </selection>
         </div>
-        <script src="czg.js"></script>
+        </div>
     </body>
 </html>
