--- a/exercises/module-2/css-penguin/cp.html
+++ b/exercises/module-2/css-penguin/cp.html
@@ -24,6 +24,10 @@
       <div class="blush-left"></div>
       <div class="beak-top"></div>
       <div class="beak-bottom"></div>
+      <div class="breast-left"></div>
+      <div class="breast-right"></div>
+      <div class="nipple-left"></div>
+      <div class="nipple-right"></div>
     </div>
   </div>
 </body>
